fix header clipping. less pixels to reclass divs.

--- a/css/contact.css
+++ b/css/contact.css
@@ -13,86 +13,14 @@ header {
     height: 360px;
     z-index: 10;
 }
-.header-banner {
-    background-color: #073200;
-    background-blend-mode: color-burn;
-    /* background-image: url('../img/bkgrnd.jpg'); */
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: 100%;
-    height: 300px;
-}
-
-.luigi {
-  background-color: darkslategray;
-
-}
-
-
 
 h1 {
     font-family: 'oswald', Arial, Helvetica, sans-serif;
     }
 
-.mario {
-  background-color: #72C59B;
-  width: 25%;
-  height: 250px;
-  position: relative;
-  background-image: url("../img/delish-bolognese-horizontal-1-1540572556.jpg");
-  background-position: center;
-  background-size: 100%;
-  opacity: 50%;
- }
-
- .tweet_card{
-    background-image: url('css/TwitterLogo.png'); 
-    position: "absolute";
- }
- .modal-content {
-    width: 100%;
- }
- .modal-dialogue {
-    width: 90%;
- }
- .meme_screen {
-    width: 40%;
-    height: 40%;
-    margin: 1.25em;
- }
-
-/* .nineteen, .info {
-    font-size : 20px;
-    color: black;
-    z-index: 1 !important;
-    opacity: 100% !important;
-  } */
-  .linkedin, .github, .email {
-    font-size: 20px;
-    font-weight: 600;
-    opacity: 100% !important;
-  }
- p {
+p {
     margin-right: 50%;
     padding-left: 10%;
- }
-.email {
-    font-size: 20px;
-    font-weight: 600;
-    opacity: 100% !important;
-    color: rgb(61, 139, 46);
-    background-color: darkslategrey;
-}
-
-.linkedin {
-    background-color: rgb(61, 139, 46);
-    color: darkslategray;
-}
-
-.github {
-    color: rgb(61, 139, 46);
-    background-color: darkslategrey;
 }
 
 header h1 {
@@ -104,15 +32,6 @@ header h1 {
     left: 2rem;
     opacity: 90%;
 }
-
-.fixed-header {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-}
-
-
 
 nav {
     width: 100%;
@@ -132,10 +51,6 @@ nav div {
     left: 2%;
     visibility: hidden;
 }
-.visible-title {
-    visibility: visible;
-}
-
 nav ul {
     list-style-type: none;
     margin: 0 2% auto 0;
@@ -156,9 +71,96 @@ nav ul li a {
     text-decoration: none;
     color: #f0c506;
     background-color: #939597;
-    font-size: 1.7rem;
+    font-size: 2rem;
     z-index: 1;
+    transition: background-color 2s ease-out 100ms
+  }
+  
+  div:hover {
+    background-color: #976781;
+  }
+
+.header-banner {
+    background-color: #073200;
+    background-blend-mode: color-burn;
+    /* background-image: url('../img/bkgrnd.jpg'); */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 300px;
 }
+
+.luigi {
+  background-color: darkslategray;
+
+}
+
+.mario {
+    background-color: #72C59B;
+    width: 25%;
+    height: 250px;
+    position: relative;
+    background-image: url("../img/delish-bolognese-horizontal-1-1540572556.jpg");
+    background-position: center;
+    background-size: 100%;
+    opacity: 50%;
+   }
+
+ .tweet_card{
+    background-image: url('css/TwitterLogo.png'); 
+    position: "absolute";
+ }
+ .modal-content {
+    width: 100%;
+ }
+ .modal-dialogue {
+    width: 90%;
+ }
+ .meme_screen {
+    width: 40%;
+    height: 40%;
+    margin: 1.25em;
+ }
+
+  .linkedin, .github, .email {
+    font-size: 20px;
+    font-weight: 600;
+    opacity: 100% !important;
+  }
+
+.email {
+    font-size: 20px;
+    font-weight: 600;
+    opacity: 100% !important;
+    color: rgb(61, 139, 46);
+    background-color: darkslategrey;
+}
+
+.linkedin {
+    background-color: rgb(61, 139, 46);
+    color: darkslategray;
+}
+
+.github {
+    color: rgb(61, 139, 46);
+    background-color: darkslategrey;
+}
+
+
+
+.fixed-header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+}
+
+
+.visible-title {
+    visibility: visible;
+}
+
 
 
 @media only screen and (max-width: 960px) {
